<resources>
    <string name="app_name">Blog Me!</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="inicio_sesion">Inicio Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="tags">Tags</string>
    <string name="cuerpo">Escriba el contenido...</string>
    <string name="publicar">Publicar</string>
    <string name="titulo">Título de la publicación</string>
    <string name="crear_publicacion">Crear Publicación</string>
</resources>
